Added implementation of learning actions and completed the optimization code